# UdacityRoboticsCourse

./: .gitignore  CMakeLists.txt  README.md  VSCodeWS.code-workspace
catkin_ws/devel/: _setup_util.py  local_setup.sh  setup.sh
catkin_ws/devel/lib/pkgconfig/: ball_chaser.pc  mini_hawk.pc  simple_arm.pc
catkin_ws/devel/lib/simple_arm/: arm_mover  look_away  simple_mover
catkin_ws/devel/share/ball_chaser/cmake/: ball_chaserConfig.cmake
catkin_ws/devel/share/mini_hawk/cmake/: mini_hawkConfig.cmake
catkin_ws/devel/share/roseus/ros/simple_arm/: manifest.l
catkin_ws/devel/share/simple_arm/cmake/: simple_arm-msg-extras.cmake  simple_armConfig.cmake
catkin_ws/src/ball_chaser/: CMakeLists.txt  package.xml
catkin_ws/src/ball_chaser/src/: drive_bot.cpp  process_image.cpp
catkin_ws/src/mini_hawk/: CMakeLists.txt  package.xml
catkin_ws/src/mini_hawk/launch/: robot_description.launch  world.launch
catkin_ws/src/mini_hawk/urdf/: mini_hawk.gazebo  mini_hawk.xacro
catkin_ws/src/mini_hawk/worlds/: Roost.world
catkin_ws/src/simple_arm/: CMakeLists.txt
catkin_ws/src/simple_arm/launch/: robot_spawn.launch
catkin_ws/src/simple_arm/src/: look_away.cpp  simple_mover.cpp
model/MiniHawk/: model.sdf
model/Roost/: model.config  model.sdf
model/mini_hawk/: model.config  model.sdf
model/mini_hawk/meshes/: MiniHawk.mtl  MiniHawkArm.mtl  MiniHawkBase.mtl  MiniHawkElevonLeft.mtl  MiniHawkPropA.mtl  MiniHawkPropB.mtl
script/: minihawk_behavioral.cpp
world/: MainWorld  Roost.sdf
